--- a/case_study_angular/furama/src/app/furama/furama.component.html
+++ b/case_study_angular/furama/src/app/furama/furama.component.html
@@ -59,7 +59,7 @@
         <div class="header__contact d-flex">
           <div class="address flex-fill">
             <div class="d-flex">
-              <img src="/images/map.svg" alt="" class="me-5" />
+              <img src="../../assets/images/map.svg" alt="" class="me-5" />
               <div class="d-flex flex-column">
                 <p class="fs-5 mb-3 address-size">
                   103 – 105 Đường Võ Nguyên Giáp, Phường Khuê Mỹ, Quận Ngũ hành
@@ -73,11 +73,11 @@
           </div>
           <div class="phone-email flex-fill">
             <div class="d-flex align-items-center mb-3">
-              <img src="/images/telephone.svg" class="me-4" alt="" />
+              <img src="../../assets/images/telephone.svg" class="me-4" alt="" />
               <span class="fs-4 text-dark">84-236-3847 333/888</span>
             </div>
             <div class="d-flex align-items-center">
-              <img src="/images/envelope.svg" class="me-4" alt="" />
+              <img src="../../assets/images/envelope.svg" class="me-4" alt="" />
               <span class="fs-4 text-dark">reservation@furamavietnam.com</span>
             </div>
           </div>
@@ -116,8 +116,6 @@
         </ul>
       </div>
     </section>
-    <!-- Phần thân của page-->
-      <section class="main"></section>
     <!--Phần footer của page-->
     <section class="footer d-flex justify-content-center mt-5">
       <div class="wrapper container">
