--- a/exercise_new5/yourProject/src/app/app.component.html
+++ b/exercise_new5/yourProject/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--<app-calculator></app-calculator>-->
-<app-color></app-color>
+<!--<app-color></app-color>-->
+<app-navbar></app-navbar>
+<app-article></app-article>
