--- a/case_study_angular/furama/src/app/app.component.html
+++ b/case_study_angular/furama/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--<app-furama></app-furama>-->
 <!--<app-list-facility></app-list-facility>-->
 <!--<app-edit-facility></app-edit-facility>-->
-<app-add-facility></app-add-facility>
+<!--<app-add-facility></app-add-facility>-->
+<!--<app-list-customer></app-list-customer>-->
+<app-edit-customer></app-edit-customer>
