--- a/exercise_new5/yourProject/src/app/register-form/register-form.component.html
+++ b/exercise_new5/yourProject/src/app/register-form/register-form.component.html
@@ -1,90 +1,216 @@
 <div class="container">
-  <h2>Tao moi </h2>
-  <form class="row g-3 needs-validation" novalidate autocomplete="off"
-        [formGroup]="rfStudent" (ngSubmit)="onSubmit()">
-
+  <h2>Register Form</h2>
+  <form [formGroup]="rfForm" (ngSubmit)="onSubmit()" autocomplete="off">
     <div class="mb-3">
-
-      <label class="form-label">Ten</label>
-      <input type="text" class="form-control" required
-             formControlName="name"
-             [ngClass]="rfStudent.controls['name'].errors ? 'is-invalid' : 'is-valid'">
-
+      <label for="name" class="form-label">Name</label>
+      <input
+        formControlName="name"
+        type="text"
+        class="form-control"
+        id="name"
+        [ngClass]="
+          rfForm.controls['name'].touched
+            ? rfForm.controls['name'].invalid
+              ? 'is-invalid'
+              : 'is-valid'
+            : ''
+        "
+      />
       <div class="invalid-feedback">
-        <div *ngIf="rfStudent.controls['name'].errors?.required
-        && (rfStudent.controls['name'].touched) ">
-          Please input a required!
+        <div
+          *ngIf="
+            rfForm.controls['name'].hasError('required') &&
+            rfForm.controls['name'].touched
+          "
+        >
+          Please enter a name.
         </div>
-        <div *ngIf="rfStudent.controls['name'].hasError('minlength')
-        && (rfStudent.controls['name'].touched) ">
-          Please input min length > 5!
-        </div>
-        <div *ngIf="rfStudent.controls['name'].hasError('pattern')
-        && (rfStudent.controls['name'].touched) ">
-          Ban can nhap dung dinh dang!
+        <div
+          *ngIf="
+            rfForm.controls['name'].hasError('minlength') &&
+            rfForm.controls['name'].touched
+          "
+        >
+          A name's min length is 5 characters.
         </div>
       </div>
-
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Diem</label>
-      <input type="text" class="form-control" required
-             formControlName="point"
-             [ngClass]="rfStudent.controls['point'].errors ? 'is-invalid' : 'is-valid'">
+      <label for="age" class="form-label">Age</label>
+      <input
+        formControlName="age"
+        type="number"
+        class="form-control"
+        id="age"
+        [ngClass]="
+          rfForm.controls['age'].touched
+            ? rfForm.controls['age'].invalid
+              ? 'is-invalid'
+              : 'is-valid'
+            : ''
+        "
+      />
       <div class="invalid-feedback">
-        <div *ngIf="rfStudent.controls['point'].hasError('required')
-        && (rfStudent.controls['point'].touched) ">
-          Please input a required!
+        <div
+          *ngIf="
+            rfForm.controls['age'].hasError('required') &&
+            rfForm.controls['age'].touched
+          "
+        >
+          Please enter the age.
         </div>
-        <div *ngIf="rfStudent.controls['point'].hasError('minlength')
-        && (rfStudent.controls['point'].touched) ">
-          Please input min length > 5!
+        <div
+          *ngIf="
+            rfForm.controls['age'].hasError('min') &&
+            rfForm.controls['age'].touched
+          "
+        >
+          Min age is 18.
+        </div>
+        <div
+          *ngIf="
+            rfForm.controls['age'].hasError('max') &&
+            rfForm.controls['age'].touched
+          "
+        >
+          Max age is 100.
         </div>
       </div>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Dia chi</label>
-      <input type="text" class="form-control" required
-             formControlName="address"
-             [ngClass]="rfStudent.controls['address'].errors ? 'is-invalid' : 'is-valid'">
+      <p class="form-label">Gender</p>
+      <div>
+        <input formControlName="gender" type="radio" value="0" />
+        <label class="form-label">Male</label>
+      </div>
+      <div>
+        <input formControlName="gender" type="radio" value="1" />
+        <label class="form-label">Female</label>
+      </div>
+      <div>
+        <input formControlName="gender" type="radio" value="2" />
+        <label class="form-label">Others</label>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="country" class="form-label">Country</label>
+      <select
+        formControlName="country"
+        type="text"
+        class="form-control"
+        id="country"
+      >
+        <option value="Viet Nam">Viet Nam</option>
+        <option value="America">America</option>
+        <option value="Korea">Korea</option>
+        <option value="France">France</option>
+      </select>
+    </div>
+
+    <div class="mb-3">
+      <label for="phone" class="form-label">Phone number</label>
+      <input
+        formControlName="phone"
+        type="text"
+        class="form-control"
+        id="phone"
+        [ngClass]="
+          rfForm.controls['phone'].touched
+            ? rfForm.controls['phone'].invalid
+              ? 'is-invalid'
+              : 'is-valid'
+            : ''
+        "
+      />
       <div class="invalid-feedback">
-        <div *ngIf="rfStudent.controls['address'].hasError('required')
-        && (rfStudent.controls['address'].touched) ">
-          Please input a required!
+        <div
+          *ngIf="
+            rfForm.controls['phone'].hasError('required') &&
+            rfForm.controls['phone'].touched
+          "
+        >
+          Please enter the phone .
         </div>
-        <div *ngIf="rfStudent.controls['address'].hasError('minlength')
-        && (rfStudent.controls['address'].touched) ">
-          Please input min length > 5!
+        <div
+          *ngIf="
+            rfForm.controls['phone'].hasError('pattern') &&
+            rfForm.controls['phone'].touched
+          "
+        >
+          Wrong phone number format.
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input
+          formControlName="email"
+          type="email"
+          class="form-control"
+          id="exampleInputEmail1"
+          [ngClass]="
+            rfForm.controls['email'].touched
+              ? rfForm.controls['email'].invalid
+                ? 'is-invalid'
+                : 'is-valid'
+              : ''
+          "
+        />
+        <div class="invalid-feedback">
+          <div
+            *ngIf="
+              rfForm.controls['email'].hasError('required') &&
+              rfForm.controls['email'].touched
+            "
+          >
+            Please enter the email.
+          </div>
+          <div
+            *ngIf="
+              rfForm.controls['email'].hasError('pattern') &&
+              rfForm.controls['email'].touched
+            "
+          >
+            Wrong email format.
+          </div>
         </div>
       </div>
     </div>
 
     <div class="mb-3">
-      <label class="form-label">Mat khau</label>
-      <input type="password" class="form-control" required
-             formControlName="password">
+      <label for="exampleInputPassword1" class="form-label">Password</label>
+      <input
+        formControlName="password"
+        type="password"
+        class="form-control"
+        id="exampleInputPassword1"
+      />
     </div>
-
     <div class="mb-3">
-      <label class="form-label">Xac nhan mat khau</label>
-      <input type="password" class="form-control" required
-             formControlName="confirmPassword"
-             [ngClass]="rfStudent.hasError('reConfirmPassword') ? 'is-invalid' : 'is-valid'">
-      <div class="invalid-feedback"
-           *ngIf="rfStudent.hasError('reConfirmPassword')">
-        Password not match ....
+      <label for="exampleInputConfirmPassword1" class="form-label"
+        >Confirm Password</label
+      >
+      <input
+        formControlName="confirmPassword"
+        type="password"
+        class="form-control"
+        id="exampleInputConfirmPassword1"
+        [ngClass]="
+          rfForm.hasError('reconfirmPassword') ? 'is-invalid' : 'is-valid'
+        "
+      />
+      <div
+        *ngIf="rfForm.hasError('reconfirmPassword')"
+        class="invalid-feedback"
+      >
+        Confirm password does not match.
       </div>
     </div>
-
-    <div class="mb-3">
-      <button class="btn btn-primary" type="submit"
-              [disabled]="!rfStudent.valid"
-      >Submit
-      </button>
-    </div>
+    <button type="submit" class="btn btn-primary" [disabled]="!rfForm.valid">
+      Submit
+    </button>
   </form>
-
 </div>
-<!--[disabled]="!rfStudent.valid"-->
